--- a/app/views/index.html
+++ b/app/views/index.html
@@ -7,13 +7,90 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
 
-    {% include "govuk-prototype-kit/includes/homepage-top.njk" %}
 
+    <span class="govuk-caption-xl">Farming and Countryside Programme</span>
     <h1 class="govuk-heading-xl">
       {{ serviceName }}
     </h1>
 
-    {% include "govuk-prototype-kit/includes/homepage-bottom.njk" %}
+    <p class="govuk-body-l">The Future Grants service brings together two types of one-off competitive capital grants available to farmers.</p>
+<p>Farming Transformation Fund (FTF) provides grants towards large capital items to help businesses improve productivity, profitability and environmental sustainability. These grants are for between £25,000 and £500,000.</p>
+
+<p>Farming Equipment and Technology Fund (FETF) provides farmers with grants for equipment or technology. These grants are for between £1,000 and £25,000.</p>
+
+
+<hr style="margin: 40px 0;">
+
+<h3 class="govuk-heading-m">Contents</h3>
+
+    <ul class="govuk-list">
+      <li>
+        <a class="govuk-link" href="#high-fidelity-design">High-fidelity design</a>
+      </li>
+      <li>
+        <a class="govuk-link" href="#low-fidelity-design">Low-fidelity design</a>
+      </li>
+      <li>
+        <a class="govuk-link" href="#service-design">Service design</a>
+      </li>
+    </ul>
+
+
+<hr id="high-fidelity-design" style="margin: 40px 0;">
+    <h2 class="govuk-heading-l">High-fidelity design</h2>
+
+    <h3 class="govuk-heading-m">Phase: Expression of Interest</h3>
+
+    <p>User Research - Round 1 (September 2023)</p>
+<p>Prototype: <a href="https://www.figma.com/proto/Z1i53yz6r8Eijed6ATBwze/Future-Grants---Transactional-journey-designs?page-id=1264%3A86086&type=design&node-id=1448-79466&viewport=479%2C386%2C0.06&t=NChslwdzbEfB3QFx-8&scaling=min-zoom&starting-point-node-id=1448%3A79466&hotspot-hints=0&hide-ui=1" target="_blank">EOI prototype - Figma (opens in new tab)</a></p>
+<p>Research outputs:</p>
+
+    <h3 class="govuk-heading-m">Phase: Application</h3>
+
+    <p>User Research - Round 1 (September 2023)</p>
+    <p>Prototype:</p>
+    <p>Research outputs:</p>
+
+    <h3 class="govuk-heading-m">Phase: Grant Funding Agreement</h3>
+
+<!-- <p class="govuk-body-l">Prototype links:</p>
+<p>Prototype links:</p> -->
+
+<p>User Research - Round 1 (August 2023)</p>
+<p>Prototype: <a href="https://www.figma.com/proto/Z1i53yz6r8Eijed6ATBwze/Future-Grants---Transactional-journey-designs?page-id=941%3A80336&type=design&node-id=2975-80643&viewport=749%2C283%2C0.14&t=6JWuK5oP9fZN4RPx-8&scaling=min-zoom&starting-point-node-id=950%3A80338&hotspot-hints=0&hide-ui=1" target="_blank">Agreement prototype - Figma (opens in new tab)</a></p>
+
+<p>Research outputs:</p>
+
+<h3 class="govuk-heading-m">Phase: Claims</h3>
+
+<p>User Research - Round 1 (September 2023)</p>
+<p>Prototype:</p>
+<p>Research outputs:</p>
+
+<hr id="low-fidelity-design" style="margin: 40px 0;">
+
+<h2 class="govuk-heading-l">Low-fidelity design</h2>
+
+<p>Prototype: <a href="https://www.figma.com/proto/k39fi8BCn0S1i9rVFihmuw/Future-Grants---Transactional-E2E-low-fidelity-prototype?page-id=0%3A1&type=design&node-id=6-416&viewport=484%2C192%2C0.06&scaling=min-zoom&starting-point-node-id=6%3A416" target="_blank">Low-fidelity prototype - Figma (opens in new tab)</a></p>
+<p>Research outputs: <a href="https://defra.sharepoint.com/:p:/s/MSTDefraFSGServiceLineBoard/EY8TJ6uJIc5HoU_gmaxdYHIBJCSbTp_30zYrO0ZvhIFDKA?e=W1awA3" target="_blank">Low-fidelity Research Insights - Powerpoint (opens in new tab)</a></p>
+<p>E2E flow diagram: <a href="https://app.mural.co/t/1010defra0589/m/1010defra0589/1682675098512/bad82167914a454cbcf8a9378b175be62b00ca51?wid=7-1682675140064" target="_blank">E2E flow v1.0 - Mural (opens in new tab)</a></p>
+
+<hr id="service-design" style="margin: 40px 0;">
+
+<h2 class="govuk-heading-l">Service design</h2>
+
+<p>Visual service blueprint: <a href="https://app.mural.co/t/dcx6016/m/dcx6016/1680772774235/818de9cbf49a0707a8fe625bbf1ce9bdaaac6440?sender=u6609daa1d6d5f14bc3eb0833" target="_blank">Mural board (opens in new tab)</a></p>
+
+<hr>
+
+<h3 class="govuk-heading-m">Team contact details</h3>
+<ul class="govuk-list">
+  <li>Content design: <a href="mailto:carole.ray@capgemini.com">Carole Ray</a></li>
+  <li>Interaction design: <a href="mailto:gareth.thomas@defra.gov.uk">Gareth Thomas</a> / <a href="mailto:Mikael.Metthey@defra.gov.uk">Mikael Metthey</a></li>
+  <li>Service design: <a href="mailto:gren.hamlyn@capgemini.com">Gren Hamlyn</a></li>
+  <li>User research: <a href="mailto:Vidya.Sarangapani@defra.gov.uk">Vidya Sarangapani</a> / <a href="mailto:Daniel.Okoli@defra.gov.uk">Daniel Okoli</a></li>
+</ul>
+
   </div>
 </div>
 
