FTF Agreement iterations

--- a/app/views/ftf/_includes/body-content_agreement-accepted-main-block.html
+++ b/app/views/ftf/_includes/body-content_agreement-accepted-main-block.html
@@ -1,5 +1,5 @@
 <span class="content-section">
-<h2 class="govuk-heading-m">Changes to your Agreement</h2>
+<h2 class="govuk-heading-m">Changes to your agreement</h2>
 <p class="govuk-body">If you need to make a change to your project from what is set out in your Grant Funding Agreement, you must get approval from the RPA before you make the change.</p>
 <p class="govuk-body">Examples of changes to your project include changes to:</p>
 <ul class="govuk-list govuk-list--bullet">
@@ -16,13 +16,13 @@
 </span>
 
 <span class="content-section">
-<h2 class="govuk-heading-m">Questions about your Agreement</h2>
-<p class="govuk-body">If you have any questions about your Agreement, call the RPA and follow the options for the Farming Transformation Fund scheme.</p>
+<h2 class="govuk-heading-m">Questions about your agreement</h2>
+<p class="govuk-body">If you have any questions about your agreement, call the RPA and follow the options for the Farming Transformation Fund scheme.</p>
 <p class="govuk-body"><strong>Telephone</strong><br>Telephone: 03000 200 301<br>Monday to Friday, 8:30am to 5pm (except public holidays)</p>
 <p class="govuk-body"><strong>Email</strong><br><a href="mailto:FTF@rpa.gov.uk">FTF@rpa.gov.uk</a></p>
 </span>
 
 <span class="content-section">
-<h2 class="govuk-heading-m">Withdrawing your Agreement</h2>
+<h2 class="govuk-heading-m">Withdrawing your agreement</h2>
 <p class="govuk-body">If you do not want the grant funding, you can <a href="">withdraw your application</a> before you make a claim.</p>
 </span>
