--- a/app/views/ftf/_includes/body-content_agreement-detail-main-block.html
+++ b/app/views/ftf/_includes/body-content_agreement-detail-main-block.html
@@ -1,24 +1,24 @@
 <span class="content-section">
 <p class="govuk-body">You have been awarded a grant of <strong>£72,746.26</strong>.</p>
 <p class="govuk-body">This grant is 40% of the eligible expenditure, up to the maximum sum of £181,865.66. The grant is awarded on the terms set out in this Grant Funding Agreement (GFA).</p>
-<p class="govuk-body">Your Grant Funding Agreement (‘the Agreement’) is made up of:</p>
+<!-- <p class="govuk-body">Your Grant Funding Agreement (‘the Agreement’) is made up of:</p>
 <ul class="govuk-list govuk-list--bullet">
   <li>the content on this screen</li>
   <li>Annexes A to C</li>
   <li>Terms and Conditions</li>
 </ul>
-<p class="govuk-body">Once you’ve reviewed and agreed to the information in this Agreement, you can download a copy for your own records.</p>
+<p class="govuk-body">Once you’ve reviewed and agreed to the information in this Agreement, you can download a copy for your own records.</p> -->
 </span>
 
 
 <span class="content-section">
-<h2 class="govuk-heading-l">Key dates in your Agreement</h2>
+<h2 class="govuk-heading-l">Key dates in your agreement</h2>
 <table class="govuk-table">
   <tbody class="govuk-table__body">
     <tr class="govuk-table__row">
       <th scope="row" class="govuk-table__header">Start date</th>
       <td class="govuk-table__cell govuk-table__cell--numeric">12/05/2023</td>
-      <td class="govuk-table__cell">Date your Agreement starts and the earliest date that any expenditure you incur (costs) in relation to the project can be eligible.</td>
+      <td class="govuk-table__cell">Date your agreement starts and the earliest date that any expenditure you incur (costs) in relation to the project can be eligible.</td>
     </tr>
     <tr class="govuk-table__row">
       <th scope="row" class="govuk-table__header">Completion date</th>
@@ -28,7 +28,7 @@
     <tr class="govuk-table__row">
       <th scope="row" class="govuk-table__header">End date</th>
       <td class="govuk-table__cell govuk-table__cell--numeric">10/04/2029</td>
-      <td class="govuk-table__cell">Date your Agreement ends (5 years after the date of the final payment).</td>
+      <td class="govuk-table__cell">Date your agreement ends (5 years after the date of the final payment).</td>
     </tr>
   </tbody>
 </table>
