--- a/app/views/ftf/_includes/body-content_what-you-need-to-do-main-block.html
+++ b/app/views/ftf/_includes/body-content_what-you-need-to-do-main-block.html
@@ -1,5 +1,5 @@
 
-<p class="govuk-body">Read the following sections that make up the agreement:</p>
+<p class="govuk-body">Read the following sections:</p>
 <ul class="govuk-list govuk-list--bullet">
   <li>Your grant funding agreement</li>
   <li>Annex A – Eligible expenditure and claim submission</li>
@@ -11,3 +11,5 @@
 <div class="govuk-inset-text">
   You must read and accept the agreement by 11:59pm on <strong>31 May 2024</strong> or the offer will expire and we cannot award you a grant.
 </div>
+
+<p class="govuk-body">Once you’ve reviewed and agreed to the information in this agreement, you can download a copy for your own records.</p>
