--- a/app/views/ftf/agreement/v1-2/agreement-accepted.html
+++ b/app/views/ftf/agreement/v1-2/agreement-accepted.html
@@ -29,7 +29,7 @@
           <p class="govuk-body">You may now start your project.</p>
           <p class="govuk-body">Your first claim schedule window is now open and can be completed within this service.</p>
           <p class="govuk-body">You should read <a href="#" target="_blank">Managing a successful Farming Transformation Fund project (opens in new tab)</a>  on GOV.UK. It explains the steps you must follow to comply with the funding rules for your grant.</p>
-          <p class="govuk-body">Download copies of your Agreement documents:</p>
+          <p class="govuk-body">Download copies of your agreement documents:</p>
           <ul class="govuk-list govuk-list--bullet">
             <li><a href="/public/downloads/dummy-download-file.txt">Your Grant Funding Agreement, including Annexes A to C</a></li>
             <li><a href="/public/downloads/dummy-download-file.txt">FTF terms and conditions</a></li>
