FETF Agreement coded prototype with design iterations

--- a/app/views/fetf/agreement/v1-2/agreement-accepted.html
+++ b/app/views/fetf/agreement/v1-2/agreement-accepted.html
@@ -18,7 +18,7 @@
               Agreement accepted
             </h1>
             <div class="govuk-panel__body">
-              Your reference number<br><strong>{{ data['ftf-project-reference'] }}</strong>
+              Your reference number<br><strong>{{ data['fetf-project-reference'] }}</strong>
             </div>
           </div>
 
@@ -26,13 +26,13 @@
           
           <span class="content-section">
           <h2 class="govuk-heading-m">What happens next</h2>
-          <p class="govuk-body">You may now start your project.</p>
-          <p class="govuk-body">Your first claim schedule window is now open and can be completed within this service.</p>
-          <p class="govuk-body">You should read <a href="#" target="_blank">Managing a successful Farming Transformation Fund project (opens in new tab)</a>  on GOV.UK. It explains the steps you must follow to comply with the funding rules for your grant.</p>
+          <p class="govuk-body">You may now purchase the items detailed in the agreement.</p>
+          <p class="govuk-body">Once the items are installed and operational, you can <a href="#">submit your claim</a>.</p>
+          <p class="govuk-body">You should read the <a href="#" target="_blank">Farming Equipment and Technology Fund Manual 2024 (opens in new tab)</a>  on GOV.UK. It explains the steps you must follow to comply with the funding rules for your grant.</p>
           <p class="govuk-body">Download copies of your agreement documents:</p>
           <ul class="govuk-list govuk-list--bullet">
-            <li><a href="/public/downloads/ftf/FTF-Water-Management-Grant-Agreement-Example.pdf" target="_blank">Your grant funding agreement, including Annexes A to C</a></li>
-            <li><a href="/public/downloads/ftf/FTF-GFA-Terms-and-Conditions.pdf" target="_blank">FTF terms and conditions</a></li>
+            <li><a href="/public/downloads/fetf/fetf-grant-funding-agreement.txt">Your grant funding agreement</a></li>
+            <li><a href="/public/downloads/fetf/fetf-terms-and-conditions.txt">FETF terms and conditions</a></li>
           </ul>
         </span>
           
