--- a/app/views/ftf/_includes/body-content_agreement-accepted-main-block.html
+++ b/app/views/ftf/_includes/body-content_agreement-accepted-main-block.html
@@ -1,6 +1,6 @@
 <span class="content-section">
 <h2 class="govuk-heading-m">Changes to your agreement</h2>
-<p class="govuk-body">If you need to make a change to your project from what is set out in your Grant Funding Agreement, you must get approval from the RPA before you make the change.</p>
+<p class="govuk-body">If you need to make a change to your project from what is set out in your grant funding agreement, you must get approval from the RPA before you make the change.</p>
 <p class="govuk-body">Examples of changes to your project include changes to:</p>
 <ul class="govuk-list govuk-list--bullet">
   <li>supplier</li>
