--- a/app/views/ftf/_includes/body-content_agreement-detail-main-block.html
+++ b/app/views/ftf/_includes/body-content_agreement-detail-main-block.html
@@ -1,6 +1,6 @@
 <span class="content-section">
 <p class="govuk-body">You have been awarded a grant of <strong>£72,746.26</strong>.</p>
-<p class="govuk-body">This grant is 40% of the eligible expenditure, up to the maximum sum of £181,865.66. The grant is awarded on the terms set out in this Grant Funding Agreement (GFA).</p>
+<p class="govuk-body">This grant is 40% of the eligible expenditure, up to the maximum sum of £181,865.66. The grant is awarded on the terms set out in this grant funding agreement (GFA).</p>
 <!-- <p class="govuk-body">Your Grant Funding Agreement (‘the Agreement’) is made up of:</p>
 <ul class="govuk-list govuk-list--bullet">
   <li>the content on this screen</li>
