--- a/app/views/ftf/agreement/v1-1/download-grant-funding-agreement.html
+++ b/app/views/ftf/agreement/v1-1/download-grant-funding-agreement.html
@@ -21,14 +21,14 @@ Download grant funding agreement
         <p class="govuk-body-l">Download and read your grant funding agreement and terms and conditions.</p>
 
         <img src="/public/images/grant-funding-agreement-thumbnail.png" alt="Small screenshot showing page one of the grant funding agreement." class="download-thumbnail">
-        <h3 class="govuk-heading-m"><a href="/public/downloads/dummy-download-file.txt" target="_blank">Grant funding agreement</a></h3>
+        <h3 class="govuk-heading-m"><a href="/public/downloads/ftf/FTF-Water-Management-Grant-Agreement-Example.pdf" target="_blank">Grant funding agreement</a></h3>
         <p class="govuk-body-s sbi-number">DOCX, 74kb, 7 pages.</p>
 
         <hr style="display: block; clear: both; margin: 24px 0;">
 
         <img src="/public/images/ftf-terms-and-conditions-thumbnail.png" alt="Small screenshot showing page one of the FTF terms and conditions." class="download-thumbnail">
         <span style="float: left;">
-        <h3 class="govuk-heading-m"><a href="/public/downloads/dummy-download-file.txt" target="_blank">Terms and conditions</a></h3>
+        <h3 class="govuk-heading-m"><a href="/public/downloads/ftf/FTF-GFA-Terms-and-Conditions.pdf" target="_blank">Terms and conditions</a></h3>
         <p class="govuk-body-s sbi-number">PDF, 257kb, 19 pages.</p>
       </span>
 
@@ -39,7 +39,7 @@ Download grant funding agreement
         <span class="content-section">
         <h2 class="govuk-heading-m">What you need to do</h2>
         <p class="govuk-body">Download the grant funding agreement and terms and conditions.</p>
-        <p class="govuk-body">When you have read both documents, you can sign your agreement and start your project</p>
+        <p class="govuk-body">When you have read both documents, you can sign your agreement and start your project.</p>
         </span>
       
         <form method="post" action="index?03-01=complete">
