--- a/app/views/ftf/agreement/v1-3/agreement-accepted.html
+++ b/app/views/ftf/agreement/v1-3/agreement-accepted.html
@@ -31,8 +31,8 @@
           <p class="govuk-body">You should read <a href="#" target="_blank">Managing a successful Farming Transformation Fund project (opens in new tab)</a>  on GOV.UK. It explains the steps you must follow to comply with the funding rules for your grant.</p>
           <p class="govuk-body">Download copies of your agreement documents:</p>
           <ul class="govuk-list govuk-list--bullet">
-            <li><a href="/public/downloads/dummy-download-file.txt">Your Grant Funding Agreement, including Annexes A to C</a></li>
-            <li><a href="/public/downloads/dummy-download-file.txt">FTF terms and conditions</a></li>
+            <li><a href="/public/downloads/ftf/FTF-Water-Management-Grant-Agreement-Example.pdf" target="_blank">Your grant funding agreement, including Annexes A to C</a></li>
+            <li><a href="/public/downloads/ftf/FTF-GFA-Terms-and-Conditions.pdf" target="_blank">FTF terms and conditions</a></li>
           </ul>
         </span>
           
