--- a/app/views/index.html
+++ b/app/views/index.html
@@ -77,7 +77,7 @@
     <li><a href="/ftf/agreement/v1-1/" target="_blank">FTF v1.1: Downloadable agreement (opens in new tab)</a></li>
     <li><a href="/ftf/agreement/v1-2/" target="_blank">FTF v1.2: Online agreement - multiple screens (opens in new tab)</a></li>
     <li><a href="/ftf/agreement/v1-3/" target="_blank">FTF v1.3: Online agreement - single screens (opens in new tab)</a></li>
-    <li><a href="" target="_blank">FETF v1.2: Online agreement - multiple screens (opens in new tab)</a></li>
+    <li><a href="/fetf/agreement/v1-2/" target="_blank">FETF v1.2: Online agreement - multiple screens (opens in new tab)</a></li>
   </ul>
 </p>
 <br>
