Agreement design tweaks including GOV Notify emails

--- a/app/views/fetf/agreement/v1-2/index.html
+++ b/app/views/fetf/agreement/v1-2/index.html
@@ -1,4 +1,4 @@
-{% extends "layouts/main.html" %}
+{% extends "layouts/main-agreement-round-2.html" %}
 
 {% block pageTitle %}
 Water Management Grant - Round 3
@@ -33,7 +33,7 @@ Water Management Grant - Round 3
     <ul class="govuk-prototype-kit-task-list__items">
       <li class="govuk-prototype-kit-task-list__item">
         <span class="govuk-prototype-kit-task-list__task-name">
-          <a href="#" aria-describedby="download-application-form-status">
+          <a href="../../../_common/not-testing" aria-describedby="download-application-form-status">
             Select your equipment
           </a>
         </span>
@@ -41,7 +41,7 @@ Water Management Grant - Round 3
       </li>
       <li class="govuk-prototype-kit-task-list__item">
         <span class="govuk-prototype-kit-task-list__task-name">
-          <a href="#" aria-describedby="upload-application-form-status">
+          <a href="../../../_common/not-testing" aria-describedby="upload-application-form-status">
             About your equipment
           </a>
         </span>
@@ -49,7 +49,7 @@ Water Management Grant - Round 3
       </li>
       <li class="govuk-prototype-kit-task-list__item">
         <span class="govuk-prototype-kit-task-list__task-name">
-          <a href="#" aria-describedby="check-business-details-status">
+          <a href="../../../_common/not-testing" aria-describedby="check-business-details-status">
             Check business details
           </a>
         </span>
@@ -57,7 +57,7 @@ Water Management Grant - Round 3
       </li>
       <li class="govuk-prototype-kit-task-list__item">
         <span class="govuk-prototype-kit-task-list__task-name">
-          <a href="#" aria-describedby="submit-application-status">
+          <a href="../../../_common/not-testing" aria-describedby="submit-application-status">
           Submit application
           </a>
         </span>
@@ -65,7 +65,7 @@ Water Management Grant - Round 3
       </li>
       <li class="govuk-prototype-kit-task-list__item">
         <span class="govuk-prototype-kit-task-list__task-name">
-          <a href="#" aria-describedby="submit-application-status">
+          <a href="../../../_common/not-testing" aria-describedby="submit-application-status">
           Your application outcome
           </a>
         </span>
@@ -124,7 +124,7 @@ Water Management Grant - Round 3
 </ol>
 
 
-<p class="govuk-body"><a href="">Withdraw grant application</a></p>
+<p class="govuk-body"><a href="../../../_common/not-testing">Withdraw grant application</a></p>
 
 
 
