--- a/app/views/ftf/agreement/v1-2/index.html
+++ b/app/views/ftf/agreement/v1-2/index.html
@@ -1,4 +1,4 @@
-{% extends "layouts/main.html" %}
+{% extends "layouts/main-agreement-round-2.html" %}
 
 {% block pageTitle %}
 Water Management Grant - Round 3
@@ -32,7 +32,7 @@ Water Management Grant - Round 3
     <ul class="govuk-prototype-kit-task-list__items">
       <li class="govuk-prototype-kit-task-list__item">
         <span class="govuk-prototype-kit-task-list__task-name">
-          <a href="#" aria-describedby="eligibility-status">
+          <a href="../../../_common/not-testing" aria-describedby="eligibility-status">
             Check eligibility and scoring
           </a>
         </span>
@@ -40,7 +40,7 @@ Water Management Grant - Round 3
       </li>
       <li class="govuk-prototype-kit-task-list__item">
         <span class="govuk-prototype-kit-task-list__task-name">
-          <a href="#" aria-describedby="check-details-status">
+          <a href="../../../_common/not-testing" aria-describedby="check-details-status">
             Check your business and personal details
           </a>
         </span>
@@ -48,7 +48,7 @@ Water Management Grant - Round 3
       </li>
       <li class="govuk-prototype-kit-task-list__item">
         <span class="govuk-prototype-kit-task-list__task-name">
-          <a href="#" aria-describedby="register-interest-status">
+          <a href="../../../_common/not-testing" aria-describedby="register-interest-status">
             Register your interest
           </a>
         </span>
@@ -64,7 +64,7 @@ Water Management Grant - Round 3
     <ul class="govuk-prototype-kit-task-list__items">
       <li class="govuk-prototype-kit-task-list__item">
         <span class="govuk-prototype-kit-task-list__task-name">
-          <a href="#" aria-describedby="download-application-form-status">
+          <a href="../../../_common/not-testing" aria-describedby="download-application-form-status">
             Download application forms
           </a>
         </span>
@@ -72,7 +72,7 @@ Water Management Grant - Round 3
       </li>
       <li class="govuk-prototype-kit-task-list__item">
         <span class="govuk-prototype-kit-task-list__task-name">
-          <a href="#" aria-describedby="upload-application-form-status">
+          <a href="../../../_common/not-testing" aria-describedby="upload-application-form-status">
             Upload application forms and evidence
           </a>
         </span>
@@ -80,7 +80,7 @@ Water Management Grant - Round 3
       </li>
       <li class="govuk-prototype-kit-task-list__item">
         <span class="govuk-prototype-kit-task-list__task-name">
-          <a href="#" aria-describedby="check-business-details-status">
+          <a href="../../../_common/not-testing" aria-describedby="check-business-details-status">
             Check business details
           </a>
         </span>
@@ -88,7 +88,7 @@ Water Management Grant - Round 3
       </li>
       <li class="govuk-prototype-kit-task-list__item">
         <span class="govuk-prototype-kit-task-list__task-name">
-          <a href="#" aria-describedby="submit-application-status">
+          <a href="../../../_common/not-testing" aria-describedby="submit-application-status">
           Submit application
           </a>
         </span>
@@ -96,7 +96,7 @@ Water Management Grant - Round 3
       </li>
       <li class="govuk-prototype-kit-task-list__item">
         <span class="govuk-prototype-kit-task-list__task-name">
-          <a href="#" aria-describedby="submit-application-status">
+          <a href="../../../_common/not-testing" aria-describedby="submit-application-status">
           Your application outcome
           </a>
         </span>
@@ -161,7 +161,7 @@ Water Management Grant - Round 3
 </ol>
 
 
-<p class="govuk-body"><a href="">Withdraw grant application</a></p>
+<p class="govuk-body"><a href="../../../_common/not-testing">Withdraw grant application</a></p>
 
 
 
