--- a/app/views/index.html
+++ b/app/views/index.html
@@ -20,8 +20,8 @@
 
 <p class="govuk-body">Farming Equipment and Technology Fund (FETF) provides farmers with grants for equipment or technology. These grants are between £1,000 and £25,000.</p>
 
-
-<hr style="margin: 40px 0;">
+<!-- 
+<hr style="margin: 40px 0;"> -->
 
 <h3 class="govuk-heading-m">Contents</h3>
 
@@ -78,8 +78,11 @@
     <li><a href="/ftf/agreement/v1-2/" target="_blank">FTF v1.2: Online agreement - multiple screens (opens in new tab)</a></li>
     <li><a href="/ftf/agreement/v1-3/" target="_blank">FTF v1.3: Online agreement - single screens (opens in new tab)</a></li>
     <li><a href="/fetf/agreement/v1-2/" target="_blank">FETF v1.2: Online agreement - multiple screens (opens in new tab)</a></li>
-  </ul>
+  </ul><br>
 </p>
+<p class="govuk-body">
+<a href="/ftf/agreement/index" target="_blank">User research landing page</a>
+<p>
 <br>
 <p class="govuk-body">Research findings:</p>
 
@@ -121,7 +124,7 @@
 <p class="govuk-body">Visual service blueprint: <a href="https://app.mural.co/t/dcx6016/m/dcx6016/1680772774235/818de9cbf49a0707a8fe625bbf1ce9bdaaac6440?sender=u6609daa1d6d5f14bc3eb0833" target="_blank">Mural board (opens in new tab)</a></p>
 </span>
 
-<hr style="margin: 40px 0;">
+<!-- <hr style="margin: 40px 0;">
 
 <span class="content-section">
 <h3 class="govuk-heading-m">Team contact details</h3>
@@ -131,7 +134,7 @@
   <li>Service design: <a href="mailto:gren.hamlyn@capgemini.com">Gren Hamlyn</a></li>
   <li>User research: <a href="mailto:Vidya.Sarangapani@defra.gov.uk">Vidya Sarangapani</a> / <a href="mailto:Daniel.Okoli@defra.gov.uk">Daniel Okoli</a></li>
 </ul>
-</span>
+</span> -->
 
   </div>
 </div>
