--- a/app/views/fetf/agreement/v1-2/agreement-accepted.html
+++ b/app/views/fetf/agreement/v1-2/agreement-accepted.html
@@ -1,4 +1,4 @@
-{% extends "layouts/main.html" %}
+{% extends "layouts/main-agreement-round-2.html" %}
 
 {% block pageTitle %}
   GOV.UK page template – {{ serviceName }} – GOV.UK Prototype Kit
