--- a/app/views/ftf/agreement/v1-1/download-grant-funding-agreement.html
+++ b/app/views/ftf/agreement/v1-1/download-grant-funding-agreement.html
@@ -1,4 +1,4 @@
-{% extends "layouts/main.html" %}
+{% extends "layouts/main-agreement-round-2.html" %}
 
 {% block pageTitle %}
 Download grant funding agreement
