Agreement email template updates

--- a/app/views/fetf/agreement/v1-2/email.html
+++ b/app/views/fetf/agreement/v1-2/email.html
@@ -126,6 +126,10 @@
             <tr>
               <td style="font-family: Helvetica, Arial, sans-serif; font-size: 19px; line-height: 1.315789474;">
         <![endif]-->
+        <p style="Margin: 0 0 20px 0; font-size: 19px; line-height: 25px; color: #0B0C0C;"><strong>Business name:</strong> Imaginary Farms Ltd<br>
+          <strong>Grant:</strong> Farming Equipment and Technology Fund 2023<br>
+          <strong>Project reference:</strong> FETF-VMA-1234</p>
+          <br>
             <p style="Margin: 0 0 20px 0; font-size: 19px; line-height: 25px; color: #0B0C0C;">Your application for the Farming Equipment and Technology Fund 2023 (Reference: FETF-VMA-1234) has been approved.</p>
 						<p style="Margin: 0 0 20px 0; font-size: 19px; line-height: 25px; color: #0B0C0C;">Your grant funding agreement is ready for you to read and accept.</p>
             <p style="Margin: 0 0 20px 0; font-size: 19px; line-height: 25px; color: #0B0C0C;"><a style="word-wrap: break-word;" href="index?03-02=ready">Read and accept your agreement</a></p>
